[homepage] 3 buttons in our process
changing the backgrounds of buttons from gradient to solid

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -34,17 +34,20 @@
         <div class="column w-col w-col-4 w-col-stack">
           <div class="hp-process-card"><img src="images/hp-process-icon1.png" alt="" class="image-3">
             <div class="card-title">Research Phase</div>
-            <div class="normal-text homepate-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div><a href="research.html" target="_blank" class="button-solid w-button">View Research</a></div>
+            <div class="normal-text homepate-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
+            <a href="research.html" target="_blank" class="button-solid button-red w-button">Read More</a>
+          </div>
         </div>
         <div class="column-2 w-col w-col-4 w-col-stack">
           <div class="hp-process-card"><img src="images/hp-process-icon2.png" alt="" class="image-3 bulb">
             <div class="card-title blue-text">Conceptual Phase</div>
-            <div class="normal-text">After conducting a variety of research activities and synthesizing findings, the team defined opportunity areas and began creating design concepts.</div><a href="concept.html" target="_blank" class="button-solid button-blue w-button">View Concept</a></div>
+            <div class="normal-text">After conducting a variety of research activities and synthesizing findings, the team defined opportunity areas and began creating design concepts.</div>
+            <a href="concept.html" target="_blank" class="button-solid button-blue w-button">Read More</a></div>
         </div>
         <div class="column-3 w-col w-col-4 w-col-stack">
           <div class="hp-process-card"><img src="images/hp-process-icon3.png" alt="" class="image-3">
             <div class="card-title purple-text">Design Phase</div>
-            <div class="normal-text">During the summer, our team will move into designing deliverables based upon our final presentation with our clients. This will be our focus for the summer.</div><a data-aos="fade-up" href="coming-soon.html" class="button-solid button-purple w-button">View Design</a></div>
+            <div class="normal-text">During the summer, our team will move into designing deliverables based upon our final presentation with our clients. This will be our focus for the summer.</div><a data-aos="fade-up" href="coming-soon.html" class="button-solid button-purple w-button">Read More</a></div>
         </div>
       </div>
     </div>
@@ -53,7 +56,7 @@
     <div class="div-centered-v">
       <div class="homepage-subtitle">GET TO KNOW</div>
       <div class="homepage-title">Our team</div>
-      <div class="body-paragraph">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div><a href="concept.html" target="_blank" class="button-solid orange w-button">About Us</a></div>
+      <div class="body-paragraph">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div><a href="concept.html" target="_blank" class="button-solid orange w-button">Read More</a></div>
   </div>
   <footer id="footer" class="footnote w-clearfix">
     <div class="footer-copyright">@ Copyright 2019</div><img src="images/Asset-73x.svg" alt="" class="image-5"></footer>
