--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -458,7 +458,7 @@
         </div>
       </div>
       <p class="normal-text halfway-paragraph">Our next step was to find a way to brainstorm and ideate in the selected problem areas. To see our concepts, please go to the next section.</p>
-      <div class="title next">Next Step</div><img src="images/arrow.svg" alt="" class="image-17"><a href="concept.html" class="button-solid button-blue button-next w-button">View Concept</a></div>
+      <div class="title next">Next Step</div><img src="images/arrow.svg" alt="" class="image-17"><a href="concept.html" class="button-solid button-gradient-blue button-next w-button">View Concept</a></div>
   </div>
   <footer id="footer" class="footnote w-clearfix">
     <div class="footer-copyright">@ Copyright 2019</div><img src="images/Asset-73x.svg" alt="" class="image-5"></footer>
