[homepage] get to know our team button
Havn't figure out how to make gradient border so I use solid color for now

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -56,7 +56,7 @@
     <div class="div-centered-v">
       <div class="homepage-subtitle">GET TO KNOW</div>
       <div class="homepage-title">Our team</div>
-      <div class="body-paragraph">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div><a href="concept.html" target="_blank" class="button-solid orange w-button">Read More</a></div>
+      <div class="body-paragraph">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div><a href="concept.html" target="_blank" class="button-solid red-border w-button">Read More</a></div>
   </div>
   <footer id="footer" class="footnote w-clearfix">
     <div class="footer-copyright">@ Copyright 2019</div><img src="images/Asset-73x.svg" alt="" class="image-5"></footer>
