--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -21,15 +21,16 @@
 <body class="body">
   <div id="homepage-banner" class="na-section homepage-banner">
     <div id="banner-content" class="div-centered-v">
-      <div class="hp-banner-subtitle">CMU MHCI 2019 Capstone x Liquidnet</div>
+      <div class="subtitle">CMU MHCI 2019 Capstone x Liquidnet</div>
       <div class="hp-banner-title" data-ix="new-interaction">Re-shaping a Trader’s Digital Experience</div>
       <div class="hp-banner-paragraph">Trading desks are shrinking as algorithms and trading software become a one-stop shop for liquidity and research. How will Liquidnet continue to deliver unique value to traders in both liquidity and research data?</div>
-    </div><a href="http://www.freepik.com"><img src="images/banner-illustration.png" alt="Designed by fullvector / Freepik" class="banner-img"></a><a hidden href="http://www.freepik.com">Designed by fullvector / Freepik</a>
+      <img src="images/banner-illustration.png" alt="Designed by fullvector / Freepik" class="banner-img">
+    </div>
 </div>
   <div id="our-process" class="na-section">
     <div class="div-centered-v">
-      <div class="homepage-subtitle">GET TO KNOW</div>
-      <div class="homepage-title">Our process</div>
+      <div class="subtitle">GET TO KNOW</div>
+      <div class="hp-title">Our Process</div>
       <div class="columns w-row">
         <div class="column w-col w-col-4 w-col-stack">
           <div class="hp-process-card"><img src="images/hp-process-icon1.png" alt="" class="image-3">
@@ -52,7 +53,7 @@
   <div id="our-team" class="na-section bg-pink">
     <div class="div-centered-v">
       <div class="homepage-subtitle">GET TO KNOW</div>
-      <div class="homepage-title">Our team</div>
+      <div class="hp-title">Our team</div>
       <div class="body-paragraph">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div><a href="concept.html" target="_blank" class="button-solid orange w-button">About Us</a></div>
   </div>
   <footer id="footer" class="footnote w-clearfix">
