--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -18,55 +18,79 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
+
 <body class="body">
-  <div id="homepage-banner" class="na-section homepage-banner">
-    <div id="banner-content" class="div-centered-v">
-      <div class="hp-banner-subtitle">CMU MHCI 2019 Capstone x Liquidnet</div>
-      <div class="hp-banner-title" data-ix="new-interaction">Re-shaping a Trader’s Digital Experience</div>
-      <div class="hp-banner-paragraph">Trading desks are shrinking as algorithms and trading software become a one-stop shop for liquidity and research. How will Liquidnet continue to deliver unique value to traders in both liquidity and research data?</div>
-    </div><a href="http://www.freepik.com"><img src="images/banner-illustration.png" alt="Designed by fullvector / Freepik" class="banner-img"></a><a hidden href="http://www.freepik.com">Designed by fullvector / Freepik</a>
+<div id="homepage-banner" class="na-section homepage-banner">
+  <div id="banner-content" class="div-centered-v">
+    <div class="hp-banner-subtitle">CMU MHCI 2019 Capstone x Liquidnet</div>
+    <div class="hp-banner-title" data-ix="new-interaction">Re-shaping a Trader’s Digital Experience</div>
+    <div class="hp-banner-paragraph">Trading desks are shrinking as algorithms and trading software become a one-stop shop for liquidity and research. How will Liquidnet continue to deliver unique value to traders in both liquidity and research data?</div>
+  </div>
+  <a href="http://www.freepik.com"><img src="images/homepage/banner-illustration.png" alt="Designed by fullvector / Freepik" class="banner-img"></a><a hidden href="http://www.freepik.com">Designed by fullvector / Freepik</a>
 </div>
-  <div id="our-process" class="na-section">
-    <div class="div-centered-v">
-      <div class="homepage-subtitle">GET TO KNOW</div>
-      <div class="homepage-title">Our process</div>
-      <div class="columns w-row">
-        <div class="column w-col w-col-4 w-col-stack">
-          <div class="hp-process-card"><img src="images/hp-process-icon1.png" alt="" class="image-3">
-            <div class="card-title">Research Phase</div>
-            <div class="normal-text homepate-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
-            <a href="research.html" target="_blank" class="button-solid button-red w-button">Read More</a>
-          </div>
+
+<!-- Our Process -->
+<div id="our-process" class="na-section">
+  <div class="div-centered-v">
+    <div class="homepage-subtitle">GET TO KNOW</div>
+    <div class="homepage-title">Our process</div>
+    <div class="columns w-row">
+      <div class="column w-col w-col-4 w-col-stack">
+        <div class="hp-process-card">
+          <img src="images/homepage/hp-process-icon1.png" alt="" class="image-3">
+          <div class="card-title">Research Phase</div>
+          <div class="normal-text homepate-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
+          <a href="research.html" target="_blank" class="button-solid button-red w-button">Read More</a>
         </div>
-        <div class="column-2 w-col w-col-4 w-col-stack">
-          <div class="hp-process-card"><img src="images/hp-process-icon2.png" alt="" class="image-3 bulb">
-            <div class="card-title blue-text">Conceptual Phase</div>
-            <div class="normal-text">After conducting a variety of research activities and synthesizing findings, the team defined opportunity areas and began creating design concepts.</div>
-            <a href="concept.html" target="_blank" class="button-solid button-blue w-button">Read More</a></div>
+      </div>
+      <div class="column-2 w-col w-col-4 w-col-stack">
+        <div class="hp-process-card">
+          <img src="images/homepage/hp-process-icon2.png" alt="" class="image-3 bulb">
+          <div class="card-title blue-text">Conceptual Phase</div>
+          <div class="normal-text">After conducting a variety of research activities and synthesizing findings, the team defined opportunity areas and began creating design concepts.</div>
+          <a href="concept.html" target="_blank" class="button-solid button-blue w-button">Read More</a>
         </div>
-        <div class="column-3 w-col w-col-4 w-col-stack">
-          <div class="hp-process-card"><img src="images/hp-process-icon3.png" alt="" class="image-3">
-            <div class="card-title purple-text">Design Phase</div>
-            <div class="normal-text">During the summer, our team will move into designing deliverables based upon our final presentation with our clients. This will be our focus for the summer.</div><a data-aos="fade-up" href="coming-soon.html" class="button-solid button-purple w-button">Read More</a></div>
+      </div>
+      <div class="column-3 w-col w-col-4 w-col-stack">
+        <div class="hp-process-card">
+          <img src="images/homepage/hp-process-icon3.png" alt="" class="image-3">
+          <div class="card-title purple-text">Design Phase</div>
+          <div class="normal-text">During the summer, our team will move into designing deliverables based upon our final presentation with our clients. This will be our focus for the summer.</div>
+          <a data-aos="fade-up" href="coming-soon.html" class="button-solid button-purple w-button">Read More</a>
         </div>
       </div>
     </div>
   </div>
-  <div id="our-team" class="na-section bg-pink">
-    <div class="div-centered-v">
-      <div class="homepage-subtitle">GET TO KNOW</div>
-      <div class="homepage-title">Our team</div>
-      <div class="body-paragraph">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div><a href="concept.html" target="_blank" class="button-solid red-border w-button">Read More</a></div>
+</div>
+
+<!-- Our Team -->
+<div id="our-team" class="na-section bg-light-purple">
+  <div class="div-centered-v">
+    <div class="homepage-subtitle">GET TO KNOW</div>
+    <div class="homepage-title">Our team</div>
+    <div class="body-paragraph">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div>
+    <a href="concept.html" target="_blank" class="button-solid red-border w-button">Read More</a>
   </div>
-  <footer id="footer" class="footnote w-clearfix">
-    <div class="footer-copyright">@ Copyright 2019</div><img src="images/Asset-73x.svg" alt="" class="image-5"></footer>
-  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <script src="js/summer.js"></script>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>AOS.init({
+</div>
+
+<!-- Footer -->
+<footer id="footer" class="footnote w-clearfix">
+    <div class="footer_content_wrapper">
+        <p class="">Design and coded by </p>
+        <img src="images/Utility/trufflin_logo.svg" alt="Trufflin Logo">
+        <p class="">@ Copyright 2019</p>
+    </div>
+</footer>
+
+<!-- JS -->
+<script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+<script src="js/summer.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>AOS.init({
     duration: 800,
-  });
-  </script>
+});
+</script>
+
 </body>
 </html>
