--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/concept.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/concept.html
@@ -123,7 +123,7 @@
     </div>
   </div>
   <footer id="footer" class="footnote w-clearfix">
-    <div class="footer-copyright">@ Copyright 2019</div><img src="images/Asset-73x.svg" alt="" class="image-5"></footer>
+    <div class="footer_content_wrapper">@ Copyright 2019</div><img src="images/Utility/Asset-73x.svg" alt="" class="image-5"></footer>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <script src="js/summer.js" type="text/javascript"></script>
