about page update

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -34,31 +34,53 @@
       <div class="normal-text">Team Trufflin members are well-versed in studying human behavior be it from a variety of fields; our backgrounds include but are not limited to business, cognitive sciences, development, and design. Like the pig that digs for the ‘black gold’ of truffles, we are digging into the financial sphere and uprooting opportunities for Liquidnet as they delve into user research and design.</div>
     </div>
   </div>
-  <div class="flex-horizontal-containter">
-    <div class="flexblock">
+  <div class="flex-horizontal-container">
+    <div class="flexblock-headshot">
       <div class="emily-headshot"></div>
+    </div>
+    <div class="flexblock-heading">
       <div class="about-name">Emily Gong</div>
-      <div class="text-descript">Experience in business intelligence and start-up culture brought me to HCI and user-centered design.</div>
+      <div class="title">CLIENT LEAD</div>
+      <div class="person-links">
+        <a href="#"><img src="images/about-icon1.png" class="link"></a>
+        <a href="#"><img src="images/about-icon2.png" class="link"></a>
+        <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
+    </div>
+    <div class="flexblock-text">
+      <div class="text-descript-1">Experience in business intelligence and start-up culture brought me to HCI and user-centered design.</div>
+      <div class="text-descript-2">Experience in business intelligence and start-up</div>      
+    </div>
+  </div>
+  <div class="flex-horizontal-container-right">
+    <div class="flexblock-text">
+      <div class="text-descript">My background in psychology and neuroscience began my leap into UX research related work.</div>   
+    </div>
+    <div class="flexblock-right">
+      <div class="about-name">June Liu</div>
+      <div class="title">Client Lead</div>
       <div class="person-links"><a href="#" class="link">LinkedIn</a><a href="#" class="link">Portfolio</a><a href="#" class="link">CV</a></div>
     </div>
     <div class="flexblock">
       <div class="june-headshot"></div>
-      <div class="about-name">June Liu</div>
-      <div class="text-descript">My background in psychology and neuroscience began my leap into UX research related work.</div>
-      <div class="person-links"><a href="#" class="link">LinkedIn</a><a href="#" class="link">Portfolio</a><a href="#" class="link">CV</a></div>
     </div>
+  </div>
+  <div class="flex-horizontal-container-right">
     <div class="flexblock">
       <div class="yingli-headshot"></div>
       <div class="about-name">Yingli Sieh</div>
       <div class="text-descript">As an Accelerated MHCI student, I value the opportunity to apply my academic skills to a real-life project.</div>
       <div class="person-links"><a href="#" class="link">LinkedIn</a><a href="#" class="link">Portfolio</a><a href="#" class="link">CV</a></div>
     </div>
+  </div>
+  <div class="flex-horizontal-container-right">
     <div class="flexblock">
       <div class="qian-headshot"></div>
       <div class="about-name">Qian Wang</div>
       <div class="text-descript">Computer science background gives me a logical and thorough mindset, while design is my true passion!</div>
       <div class="person-links"><a href="#" class="link">LinkedIn</a><a href="#" class="link">Portfolio</a><a href="#" class="link">CV</a></div>
     </div>
+  </div>
+  <div class="flex-horizontal-container-right">
     <div class="flexblock">
       <div class="nina-headshot"></div>
       <div class="about-name">Nina Yang</div>
