Fixing homepage Banner Spacing

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -20,13 +20,12 @@
 </head>
 
 <body class="body">
-<div id="homepage-banner" class="na-section homepage-banner">
-  <div id="banner-content" class="div-centered-v">
-    <div class="hp-banner-subtitle">CMU MHCI 2019 Capstone x Liquidnet</div>
+<div class="na-section homepage-banner">
+  <div class="div-centered-v">
     <div class="hp-banner-title" data-ix="new-interaction">Re-shaping a Trader’s Digital Experience</div>
     <div class="hp-banner-paragraph">Trading desks are shrinking as algorithms and trading software become a one-stop shop for liquidity and research. How will Liquidnet continue to deliver unique value to traders in both liquidity and research data?</div>
+    <img src="images/homepage/banner-illustration.png" alt="Designed by fullvector / Freepik" class="banner-img">
   </div>
-  <a href="http://www.freepik.com"><img src="images/homepage/banner-illustration.png" alt="Designed by fullvector / Freepik" class="banner-img"></a><a hidden href="http://www.freepik.com">Designed by fullvector / Freepik</a>
 </div>
 
 <!-- Our Process -->
