Done our client

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -33,6 +33,13 @@
   <div class="div-centered-v homepage-section-wrapper">
     <div class="homepage-subtitle">GET TO KNOW</div>
     <div class="homepage-title">Our Client</div>
+      <div class="div-centered-row">
+          <img src="images/homepage/1-client-img.png" alt="" id="our-client-img">
+          <div>
+              <p id="our-client-description" class="normal-text">As the foremost dark-pool trading platform, Liquidnet has led the way into privatized and anonymized trading, especially for institutional investors like large organizations on the scale of banks and insurance companies. Their technologies have focused on innovation and value to the trader over simple trade execution, which embodies their belief that improving the trader’s liquidity opportunities comes first.</p>
+              <img src="images/homepage/1-client-button.png" alt="" id="our-client-button">
+          </div>
+      </div>
   </div>
 </div>
 
