Done our project

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -29,8 +29,8 @@
 </div>
 
 <!-- Our Client -->
-<div class="na-section">
-  <div class="div-centered-v homepage-section-wrapper">
+<div class="na-section homepage-section-wrapper">
+  <div class="div-centered-v">
     <div class="homepage-subtitle">GET TO KNOW</div>
     <div class="homepage-title">Our Client</div>
       <div class="div-centered-row">
@@ -44,16 +44,36 @@
 </div>
 
 <!-- Our Project -->
-<div class="na-section">
-  <div class="div-centered-v homepage-section-wrapper">
+<div class="na-section homepage-section-wrapper bg-light-purple">
+  <div class="div-centered-v">
     <div class="homepage-subtitle">GET TO KNOW</div>
     <div class="homepage-title">Our Project</div>
+      <div class="div-centered-row">
+          <div id="our-project-content">
+              <p id="our-project-description" class="normal-text">In the scope of this project, Liquidnet aims to do the following: better understand the state of their many users while using their product, especially when dealing with time-sensitive alerts; define ways to understand their user’s behaviors and needs and translate needs into targeted content; and finally, explore the complexity of technology and data-driven design in the development of new products.</p>
+            <div class="numbers-wrapper">
+                <div class="project-numbers">
+                    <h1>9</h1>
+                    <h2>months</h2>
+                </div>
+                <div class="project-numbers">
+                    <h1>10</h1>
+                    <h2>methods</h2>
+                </div>
+                <div class="project-numbers">
+                    <h1>3</h1>
+                    <h2>concepts</h2>
+                </div>
+            </div>
+          </div>
+          <img src="images/homepage/2-project-img.png" alt="" id="our-project-img">
+      </div>
   </div>
 </div>
 
 <!-- Our Process -->
-<div class="na-section">
-  <div class="div-centered-v homepage-section-wrapper">
+<div class="na-section homepage-section-wrapper">
+  <div class="div-centered-v">
     <div class="homepage-subtitle">GET TO KNOW</div>
     <div class="homepage-title">Our process</div>
     <div class="columns w-row">
@@ -86,8 +106,8 @@
 </div>
 
 <!-- Our Team -->
-<div id="our-team" class="na-section bg-light-purple">
-  <div class="div-centered-v homepage-section-wrapper">
+<div id="our-team" class="na-section homepage-section-wrapper bg-light-purple">
+  <div class="div-centered-v">
     <div class="homepage-subtitle">GET TO KNOW</div>
     <div class="homepage-title">Our team</div>
     <div class="body-paragraph">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div>
