--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -81,7 +81,7 @@
         <div class="hp-process-card">
           <img src="images/homepage/3-process-icon1.png" alt="" class="image-3">
           <div class="card-title">Research Phase</div>
-          <div class="normal-text homepate-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
+          <div class="normal-text process-card-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
           <a href="research.html" target="_blank" class="button-solid button-red w-button">Read More</a>
         </div>
       </div>
@@ -89,7 +89,7 @@
         <div class="hp-process-card">
           <img src="images/homepage/3-process-icon2.png" alt="" class="image-3 bulb">
           <div class="card-title blue-text">Conceptual Phase</div>
-          <div class="normal-text">After conducting a variety of research activities and synthesizing findings, the team defined opportunity areas and began creating design concepts.</div>
+          <div class="normal-text process-card-text">After conducting a variety of research activities and synthesizing findings, the team defined opportunity areas and began creating design concepts.</div>
           <a href="concept.html" target="_blank" class="button-solid button-blue w-button">Read More</a>
         </div>
       </div>
@@ -97,7 +97,7 @@
         <div class="hp-process-card">
           <img src="images/homepage/3-process-icon3.png" alt="" class="image-3">
           <div class="card-title purple-text">Design Phase</div>
-          <div class="normal-text">During the summer, our team will move into designing deliverables based upon our final presentation with our clients. This will be our focus for the summer.</div>
+          <div class="normal-text process-card-text">During the summer, our team will move into designing deliverables based upon our final presentation with our clients. This will be our focus for the summer.</div>
           <a data-aos="fade-up" href="coming-soon.html" class="button-solid button-purple w-button">Read More</a>
         </div>
       </div>
@@ -106,18 +106,18 @@
 </div>
 
 <!-- Our Team -->
-<div id="our-team" class="na-section homepage-section-wrapper bg-light-purple">
+<div id="our-team" class="na-section homepage-section-wrapper">
   <div class="div-centered-v">
     <div class="homepage-subtitle">GET TO KNOW</div>
     <div class="homepage-title">Our team</div>
     <div class="body-paragraph">We are a group of 5 Carnegie Mellon University students studying in the Master of Human-Computer Interaction program, which is under the School of Computer Science. To find out more about us and our client, go to About page.</div>
-    <a href="concept.html" target="_blank" class="button-solid red-border w-button">Read More</a>
+      <img src="images/homepage/4-team-button.png" alt="" id="our-team-button">
   </div>
 </div>
 
 <!-- Footer -->
 <footer id="footer" class="footnote w-clearfix">
-    <div class="footer_content_wrapper">
+    <div class="footer-wrapper">
         <p class="">Design and coded by </p>
         <img src="images/Utility/trufflin_logo.svg" alt="Trufflin Logo">
         <p class="">@ Copyright 2019</p>
